--- a/index.html
+++ b/index.html
@@ -1,30 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
 
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
 
+  <body>
+    <div class="container-fluid">
 
-  <div class="container-fluid">
-    <div class="row">
-      <nav class="col-md-12">
-      </nav>
-    </div>
-    <div class="row">
-      <jumbotron class="col-md-12">
-      </jumbotron>
-    </div>
+      <div class="jumbotron">
+        <div class="container">
+          <h1>My First Jumbotron</h1>
+          <p>This is my first jumbotron that I built using bootstrap!</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+        </div>
+      </div>
 
-  </div>
+      <div class="container">
+
+        <div class="row">
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation"><a href="#">Profile</a></li>
+            <li role="presentation"><a href="#">Messages</a></li>
+          </ul>
+        </div>
+
+        <div class="row">
+
+          <section>
+            <p>These are some buttons...</p>
+
+            <div class="row">
+              <a href="https://www.northpointe.org/ministries/peace-center/" target="_blank" class="btn btn-info" role="button">PEACE Center</a>
+            </div>
+
+            <div class="row">
+              <div class="well well-lg">This text is stuck in a well. Send help.</div>
+            </div>
+            <div class="row">
+              <img src="C:\Users\danie\desktop\projects\mfw-day-three\Image\36630532_2068147546551305_8040858624190316544_n.jpg" class="img-responsive" alt="Responsive image">
+            </div>
+          </section>
+
+        </div>
+
+      </div>
 
   <script> src="js/bootstrap.min.js"</script>
+  <script> src="js/fontawesome.min.js"</script>
 
 </body>
 </html>
